rust_stubgen_e2e_test/test_immutable_types/rust/tests/ui/assign_readonly_field.stderr
warning: variable does not need to be mutable
  --> tests/ui/assign_readonly_field.rs:24:9
   |
24 |     let mut v = ImmutableVersion::new(1, 2, 3, tvm_ffi::String::from("x")).unwrap();
   |         ----^
   |         |
   |         help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0594]: cannot assign to data in dereference of `ImmutableVersion`
  --> tests/ui/assign_readonly_field.rs:25:5
   |
25 |     v.major = 5;
   |     ^^^^^^^^^^^ cannot assign
   |
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `ImmutableVersion`
